gccida/g2/set_mem_alias_set
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_mem_alias_set/src/emit-rtl.c:2322:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_mem_alias_set/src/emit-rtl.c:2327:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // [rsp+Ch] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_mem_alias_set/src/emit-rtl.c:2329:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)mem[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_mem_alias_set/src/emit-rtl.c:2346:29: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_CONST_INT_0( ( machine_mode)mode_size[*( ( unsigned __int8 *)mem + 2)], 0LL); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_mem_alias_set/src/emit-rtl.c:2347:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)mem[1]; 
               ^~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_mem_alias_set/src/obj/emit-rtl.o] Error 1
